@@ -849,7 +849,6 @@ lib/Publican/WebSite.pm
 lib/Publican/XmlClean.pm
 LICENSE
 MANIFEST			This list of files
-menu_combined.css
 META.yml
 perltidyrc
 po/de.po
