@@ -65,6 +65,7 @@
   - Fix create_brand not copying images. BZ #832345
   - Fix rename requiring --name parameter. BZ #694698
   - Add rev_file and info_file parameters. BZ #804917
+  - Fix multiple actions not being caught. BZ #838427
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
